# immich-export

./: .env.example  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: refresh_api_spec.py
src/immich_export/: __init__.py  __main__.py  api_contract.py  cli.py  client.py  config.py  errors.py  exporter.py  layout.py  manifest.py  models.py  progress.py  report.py  sidecar.py  views.py
tests/: conftest.py  fake_immich.py  test_cli.py  test_contract.py  test_errors.py  test_exporter.py  test_layout.py  test_manifest.py  test_progress.py  test_sidecar.py
tests/data/: immich-openapi.pruned.json
